@@ -1,11 +1,11 @@
 package org.groupscope.security;
 
 import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -17,11 +17,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-
-import java.util.Arrays;
-import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -36,7 +32,6 @@ public class WebSecurityConfig implements WebMvcConfigurer {
         this.jwtFilter = jwtFilter;
     }
 
-    // TODO authorizeRequests is deprecated
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
@@ -44,10 +39,12 @@ public class WebSecurityConfig implements WebMvcConfigurer {
                 .httpBasic(withDefaults())
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeRequests(authorize -> authorize
-                        .requestMatchers("/register", "/auth", "/oauth2", "/refresh", "/hi").permitAll()
-                        .requestMatchers(HttpMethod.HEAD, "/register", "/auth", "/oauth2", "/refresh", "/hi").permitAll()
-                        .anyRequest().authenticated())
+                .authorizeHttpRequests(
+                        authorize -> authorize
+                                .requestMatchers("/register", "/auth", "/oauth2", "/refresh", "/hi").permitAll()
+                                .requestMatchers("/groups", "/teachers", "/aud", "/subjects", "/schedule", "/sch").permitAll()
+                                .anyRequest().authenticated()
+                )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
@@ -55,10 +52,13 @@ public class WebSecurityConfig implements WebMvcConfigurer {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         final CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(ImmutableList.of("http://localhost:3000", "https://groupscope.com.ua"));
-        configuration.setAllowedMethods(ImmutableList.of("HEAD", "GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOriginPatterns(
+            List.of("http://localhost:3000", "https://groupscope.com.ua"));
+        configuration.setAllowedMethods(
+            List.of("HEAD", "GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(ImmutableList.of("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowedHeaders(
+            List.of("Authorization", "Cache-Control", "Content-Type"));
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
